fixed the money-4 gap

--- a/css/style.css
+++ b/css/style.css
@@ -429,9 +429,8 @@ html{
     gap:7px;
 }
 .money-4{
-    display: grid;
-    /* flex-direction: column; */
-    grid-template-rows:36vh 6vh;
+    display: flex;
+    flex-direction: column;
     gap:7px;
 }
 .maca{
